<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.ide.vscode</groupId>
	<artifactId>commons-parent</artifactId>
	<packaging>pom</packaging>
	<version>2.2.0-SNAPSHOT</version>
	<name>commons-parent</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.3</version>
		<relativePath></relativePath>
	</parent>

	<modules>
		<module>org.json</module>
		<module>commons-language-server</module>
		<module>commons-lsp-extensions</module>
		<module>language-server-test-harness</module>
		<module>commons-yaml</module>
		<module>commons-util</module>
		<module>commons-java</module>
		<module>java-properties</module>
		<module>commons-cf</module>
		<module>commons-maven</module>
		<module>commons-gradle</module>
		<module>commons-rewrite</module>
		<module>language-server-starter</module>
		<module>jpql</module>
	</modules>

	<repositories>
		<repository>
			<id>lsp4j-snapshots-repo</id>
			<name>lsp4j-snapshots-repo</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/org/eclipse/lsp4j/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-releases</id>
			<name>Spring Releases</name>
			<url>https://repo.spring.io/release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>sonatype-oss-snapshots</id>
			<name>Sonatype OSS Snapshots</name>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>gradle-repo</id>
			<name>Gradle Tooling Repo</name>
			<url>https://repo.gradle.org/gradle/libs-releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-snapshots</id>
			<url>https://repo.spring.io/snapshot</url>
		</pluginRepository>
		<pluginRepository>
			<id>spring-milestones</id>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>
	</pluginRepositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<signing.skip>true</signing.skip>
		<signing.alias>vmware</signing.alias>
		<java.version>21</java.version>
	</properties>

    <dependencyManagement>
        <dependencies>
			<dependency>
			    <groupId>org.openrewrite</groupId>
			    <artifactId>rewrite-bom</artifactId>
			    <version>8.74.0</version>
			    <type>pom</type>
                <scope>import</scope>
			</dependency>
            <dependency>
                <groupId>org.gradle</groupId>
                <artifactId>gradle-tooling-api</artifactId>
                <version>8.14</version>
            </dependency>
			<dependency>
				<groupId>org.eclipse.jgit</groupId>
				<artifactId>org.eclipse.jgit</artifactId>
				<version>7.2.1.202505142326-r</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.12.0</version>
			</dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.23.0</version>
            </dependency>
            <dependency>
                <groupId>com.cronutils</groupId>
                <artifactId>cron-utils</artifactId>
                <version>9.2.0</version>
            </dependency>
            <dependency>
                <groupId>com.kotcrab.remark</groupId>
                <artifactId>remark</artifactId>
                <version>1.2.0</version>
            </dependency>
            <dependency>
                <groupId>org.commonmark</groupId>
                <artifactId>commonmark</artifactId>
                <version>0.27.1</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>31.1-jre</version>
            </dependency>
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-core</artifactId>
                <version>3.5.0</version>
            </dependency>
            <dependency>
                <groupId>io.projectreactor.ipc</groupId>
                <artifactId>reactor-netty</artifactId>
                <version>0.7.15.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.lsp4j</groupId>
                <artifactId>org.eclipse.lsp4j</artifactId>
                <version>1.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.cloudfoundry</groupId>
                <artifactId>cloudfoundry-client-reactor</artifactId>
                <version>3.8.0.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.cloudfoundry</groupId>
                <artifactId>cloudfoundry-operations</artifactId>
                <version>3.8.0.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.16.1</version>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-runtime</artifactId>
                <version>4.13.1</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>jandex</artifactId>
                <version>3.5.3</version>
            </dependency>
            <dependency>
                <groupId>org.javolution</groupId>
                <artifactId>javolution-core-java</artifactId>
                <version>6.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>20231013</version>
            </dependency>
            <dependency>
                <groupId>org.atteo</groupId>
                <artifactId>evo-inflector</artifactId>
                <version>1.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

	<build>
		<plugins>
			<!-- Set source 21 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skip>${signing.skip}</skip>
					<alias>${signing.alias}</alias>
					<keystore>${signing.keystore}</keystore>
					<storetype>${signing.storetype}</storetype>
					<storepass>${signing.store.password}</storepass>
					<keypass>${signing.key.password}</keypass>
					<!-- <tsa>http://sha256timestamp.ws.symantec.com/sha256/timestamp</tsa> -->
					<tsa>http://timestamp.digicert.com</tsa>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration combine.self="append">
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
	
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>bamboo-signing</id>
			<properties>
				<signing.store.password>${env.bamboo_vault_signing_passphrase}</signing.store.password>
				<signing.key.password>${env.bamboo_vault_signing_passphrase}</signing.key.password>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-simple</artifactId> 
			</dependency> -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
